--- a/src/components/caroussel/caroussel.css
+++ b/src/components/caroussel/caroussel.css
@@ -1,40 +1,39 @@
 
 .carroussel h3 {
-    color: #007bff;
+    color: var(--secondary-color);
 ;
 }
 .carroussel p {
-    color: black;
+    color: var(--light-color);
 }
 
 div .carousel-caption {
-    background-color: aliceblue;
+    /*background-color: aliceblue; */
     opacity: 0.9;
-    border-bottom-left-radius: 20px;
+   /* border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
-    position: initial;
+    position: initial;*/
+    background-color: #2b364266;
 }
 img{
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    height: 100%;
-    width: auto;
+    height: auto;
+    width: 100%;
 }
 div .slide{
-    width: 70%;
-    margin: auto;
+    width: 100%;
+
 }
 /* indicateurs de slide*/
 div .carousel-indicators li{
-    background-color: #007bff;
+    background-color: var(--secondary-color);
 }
 
 /* fleches de control pour changer la couleur des fleches,
 changer la valeur de fill et mettre %23 à la place de # pour entrer une valeur hexa */
 .carousel-control-prev-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23007bff' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FDDE5E' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
 }
 
 .carousel-control-next-icon {
-    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23007bff' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23FDDE5E' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
