--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/*
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,7 +12,7 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
-
+*/
 /**** Thaïs CSS ****************/
 
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text&family=Nunito:wght@300&display=swap');
