--- a/src/index.css
+++ b/src/index.css
@@ -53,7 +53,7 @@ body {
 
 h2 {
   font-family: var(--title-font);
-  color: var(--main-color);
+  color: var(--secondary-color);
 }
 
 /**** Classes réutilisables *************/
@@ -77,4 +77,21 @@ h2 {
   flex-flow: row wrap;
   justify-content: center;
   align-items: center;
+}
+
+.btn, .btn:link, .btn:visited {
+  display: block;
+  background : var(--secondary-color);
+  font-family: var(--title-font);
+  border-radius: 5px;
+  padding: 10px 0;
+  text-align: center;
+  width: 150px;
+  text-decoration: none;
+  border: solid thin transparent;
+  margin: 0 auto;
+}
+
+.btn:hover {
+  border-color: var(--secondary-color)
 }
