--- a/src/components/dataContainer/quizz/quizz.css
+++ b/src/components/dataContainer/quizz/quizz.css
@@ -1,5 +1,5 @@
 .quizz {
-    background-color: #7acaac;
+    background-color: #FDDE5E;
     min-height: 200px;
     height: min-content;
     border-radius: 15px;
@@ -53,7 +53,7 @@
     width: 100%;
     font-size: 16px;
     color: #ffffff;
-    background-color: #7acaac;
+    background-color: #FDDE5E;
     border-radius: 15px;
     display: flex;
     padding: 5px;
