--- a/src/components/dataContainer/quizz/quizz.css
+++ b/src/components/dataContainer/quizz/quizz.css
@@ -52,7 +52,7 @@
 .quizz button {
     width: 100%;
     font-size: 16px;
-    color: #ffffff;
+    color: #234668;
     background-color: #FDDE5E;
     border-radius: 15px;
     display: flex;
