--- a/src/components/dataContainer/player/player.css
+++ b/src/components/dataContainer/player/player.css
@@ -2,6 +2,9 @@
     position: relative;
     padding-top: 56.25%;
     /* 720 / 1280 = 0.5625 */
+    margin-left: auto;
+    height: auto;
+    width: 75%;
 }
 
 .react-player {
