--- a/src/components/body/navigation/nav.css
+++ b/src/components/body/navigation/nav.css
@@ -10,17 +10,18 @@
 }
 
 #nav-title {
-    clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0%, 80% 100%, 0% 100%);
     background-color: var(--secondary-color);
     width: 60%;
     height: 100%;
-    padding:0 30px;
+    padding:0 10px;
 }
 
 #title:link, #title:visited {
     color: var(--main-color);
     text-transform: uppercase;
     margin: 0;
+    font-size: 0.7em;
 }
 
 #title:hover {
@@ -84,7 +85,7 @@
 
 @media screen and (min-width: 800px) {
     #nav-title {
-        width: 30%;
+        width: 35%;
     }
 
     #nav-dropdown {
@@ -108,5 +109,16 @@
 
     .link:link, .link:visited {
         color: var(--secondary-color);
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    #nav-title {
+        clip-path: polygon(0 0, 100% 0%, 75% 100%, 0% 100%);
+        padding:0 20px;
+    }
+
+    #title:link, #title:visited {
+        font-size: 1em;
     }
 }
