--- a/src/components/dataContainer/quizz/quizz.css
+++ b/src/components/dataContainer/quizz/quizz.css
@@ -1,12 +1,13 @@
 .quizz {
-    background-color: #FDDE5E;
+    background-color: var(--secondary-color);
+    color: var(--main-darker-color);
     min-height: 200px;
     height: min-content;
     border-radius: 15px;
     padding: 20px;
     box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-    display: inline-flex;
-    justify-content: space-evenly;
+    /*display: inline-flex;
+    justify-content: space-evenly;*/
 }
 
 .score-section {
@@ -51,15 +52,13 @@
 
 .quizz button {
     width: 100%;
-    font-size: 16px;
-    color: #234668;
-    background-color: #FDDE5E;
-    border-radius: 15px;
-    display: flex;
-    padding: 5px;
-    justify-content: flex-start;
-    align-items: center;
-    border: 5px solid #234668;
+    font-size: 1.1em;
+    text-align: center;
+    margin-bottom: 12px;
+    color: var(--secondary-color);
+    background-color: var(--main-color);
+    border-radius: 10px;
+    border: 1px solid var(--main-darker-color);
     cursor: pointer;
 }
 
@@ -73,6 +72,7 @@
 
 .quizz button:hover {
     background-color: #555e7d;
+    color: white;
 }
 
 button:focus {
