--- a/src/components/dataContainer/section/section.css
+++ b/src/components/dataContainer/section/section.css
@@ -86,6 +86,7 @@ div #persons .person{
         width: 100%;
         height: 50vh;
         display: flex;
+        flex-direction: row;
         background: var(--main-color);
     }
 
@@ -93,6 +94,9 @@ div #persons .person{
         background-color: var(--main-darker-color);
         height: 60%;
         width: 70%;
+        min-width: 350px;
+
+
         box-shadow: 1px 1px 5px var(--main-lighter-color);
         border-radius: 5%;
         text-align: center;
